--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>탐난맵 개인정보 처리방침</title>
+    <title>탐나는맵 개인정보 처리방침</title>
     <style>
         * {
             margin: 0;
@@ -139,7 +139,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>탐난맵</h1>
+            <h1>탐나는맵</h1>
             <p class="subtitle">개인정보 처리방침</p>
         </div>
 
@@ -149,7 +149,7 @@
 
         <div class="section">
             <h2>1. 개인정보 처리방침의 의의</h2>
-            <p>탐난맵(이하 "서비스")은 이용자의 개인정보를 소중히 여기며, 「개인정보보호법」, 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」 등 관련 법령에 따라 이용자의 개인정보를 안전하게 보호하고 관리하기 위해 본 개인정보 처리방침을 수립·공개합니다.</p>
+            <p>탐나는맵(이하 "서비스")은 이용자의 개인정보를 소중히 여기며, 「개인정보보호법」, 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」 등 관련 법령에 따라 이용자의 개인정보를 안전하게 보호하고 관리하기 위해 본 개인정보 처리방침을 수립·공개합니다.</p>
         </div>
 
         <div class="section">
@@ -266,7 +266,7 @@
 
         <div class="footer">
             <p>본 개인정보 처리방침은 2025년 1월 27일부터 시행됩니다.</p>
-            <p>© 2025 탐난맵. All rights reserved.</p>
+            <p>© 2025 탐나는맵. All rights reserved.</p>
         </div>
     </div>
 </body>
