媛쒖씤?뺣낫 蹂댄샇梨낆엫???뺣낫 ?낅뜲?댄듃: devhive濡?蹂寃?諛?臾몄쓽 ?대찓??異붽?

--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
             <h2>10. 개인정보 보호책임자</h2>
             <div class="contact-info">
                 <h3>개인정보 보호책임자</h3>
-                <p><strong>성명:</strong> [담당자명]</p>
-                <p><strong>연락처:</strong> [이메일 주소]</p>
-                <p><strong>전화번호:</strong> [전화번호]</p>
+                <p><strong>성명:</strong> devhive</p>
+                <p><strong>연락처:</strong> devhive@naver.com</p>
             </div>
             <p>개인정보 처리에 관한 불만이나 문의사항이 있으시면 개인정보 보호책임자에게 연락해 주시기 바랍니다.</p>
+            <p><strong>문의:</strong> devhive@naver.com</p>
         </div>
 
         <div class="section">
